**  denotes quite substantial/important changes
*** denotes really big changes 

1.8-11

* Improved thread safety in discrete prediction.

* bam/gam name gcv.ubre field by "method"

1.8-10

** 'multinom' family implemented for multinomial logistic regression.

* predict.bam now defaults to using efficient discrete prediction methods 
  for models fit using discrete covariate methods (bam(...,discrete=TRUE)). 

* with bam(...,discrete=TRUE) terms like s(a,b,bs="re") had wrong p-value 
  computation applied, as a result of being treated as tensor product terms.
  Fixed.

* minor tweak to soap basis setup to avoid rounding error leading to 'approx'
  occasionally producing NA's with fixed boundaries.

* misc.c:rwMatrix made thread safe (had been using R_chk_calloc, which isn't). 

* some upgrading for 64bit addressing.

* uniquecombs now preserves contrasts on factors.

* variable summary tweak so that 1 column matrices in parametric model are 
  treated as regular numeric variables.

1.8-9

* C level fix in bam(...,discrete=TRUE) code. Some memory was mistakenly 
  allocated via 'calloc' rather than 'R_chk_calloc', but was then freed
  via 'R_chk_free'. This could cause R to halt on some platforms.

1.8-8

** New "gp" smooth class (see ?gp.smooth) implemeting the Matern 
   covariance based Gaussian process model of Kamman and Wand (2003), and a 
   variety of other simple GP smoothers.

* some smooth plot methods now accept 'colors' and 'contour.col' argument to
  set color palette in image plots and contour line colors. 

* predict.gam and predict.bam now accept an 'exclude' argument allowing 
  terms (e.g. random effects) to be zeroed for prediction. For efficiency,
  smooth terms not in 'terms' or in 'exclude' are no longer evaluated, and 
  are instead set to zero or not returned. See ?predict.gam.

* ocat saturated likelihood definition changed to zero, leading to better 
  comprability of deviance between model fits (thanks to Herwig Friedl).
